--- a/.github/workflows/sync-to-gitea.yml
+++ b/.github/workflows/sync-to-gitea.yml
@@ -8,10 +8,15 @@ on:
 jobs:
   sync:
     runs-on: ubuntu-latest
-
+github
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+      
+    - name: Configure Git
+      run: |
+        git config --global user.name "github"
+        git config --global user.email "you@example.com"
 
     - name: Download gfwlist.pac
       run: curl -o gfwlist.pac https://raw.githubusercontent.com/petronny/gfwlist2pac/master/gfwlist.pac
