--- a/.github/workflows/sync-to-gitea.yml
+++ b/.github/workflows/sync-to-gitea.yml
@@ -21,11 +21,16 @@ jobs:
     - name: Download gfwlist.pac
       run: curl -o gfwlist.pac https://raw.githubusercontent.com/petronny/gfwlist2pac/master/gfwlist.pac
 
-    - name: Commit and push changes
+    - name: Commit and push changes if there are any
       run: |
         git add gfwlist.pac
-        git commit -m "Update gfwlist.pac"
-        git push origin HEAD
+        if ! git diff-index --quiet HEAD --; then
+          git commit -m "Update gfwlist.pac"
+          git push origin HEAD
+        else
+          echo "No changes to commit"
+        fi
+
 
     - name: Set up Gitea remote
       run: git remote add gitea https://<GITEA_USERNAME>:<GITEA_TOKEN>@<GITEA_URL>/<GITEA_USERNAME>/<GITEA_REPO>.git
