--- a/.github/workflows/sync-to-gitea.yml
+++ b/.github/workflows/sync-to-gitea.yml
@@ -33,7 +33,7 @@ jobs:
 
 
     - name: Set up Gitea remote
-      run: git remote add gitea https://<GITEA_USERNAME>:<GITEA_TOKEN>@<GITEA_URL>/<GITEA_USERNAME>/<GITEA_REPO>.git
+      run: git remote add gitea https://heiyu:12345678@www.tangtuan.top:5002/heiyu/pac.git
 
     - name: Push to Gitea
       run: |
