--- a/.github/workflows/sync-to-gitea.yml
+++ b/.github/workflows/sync-to-gitea.yml
@@ -20,12 +20,20 @@ jobs:
         git config --global user.name "github"
         git config --global user.email "you@example.com"
 
+    - name: Set up Gitea remote
+      run: git remote add gitea http://heiyu:12345678@www.tangtuan.top:5002/heiyu/pac-sync-from-github.git
+      
+    - name: Pull from Gitea
+      run: |
+        git fetch gitea
+        git merge gitea/master --no-edit
+        
     - name: Download gfwlist.pac
       run: curl -o gfwlist.pac https://raw.githubusercontent.com/petronny/gfwlist2pac/master/gfwlist.pac
     
     - name: Modify first line of gfwlist.pac
       run: sed -i '1s/.*/var proxy = "PROXY ipv6.tangtuan.top:5020; DIRECT;";/' gfwlist.pac
-
+        
     - name: Commit and push changes if there are any
       run: |
         git add gfwlist.pac
@@ -35,10 +43,6 @@ jobs:
         else
           echo "No changes to commit"
         fi
-
-
-    - name: Set up Gitea remote
-      run: git remote add gitea http://heiyu:12345678@www.tangtuan.top:5002/heiyu/pac-sync-from-github.git
 
     - name: Push to Gitea
       run: |
