--- a/.github/workflows/sync-to-gitea.yml
+++ b/.github/workflows/sync-to-gitea.yml
@@ -21,7 +21,7 @@ jobs:
         git config --global user.email "you@example.com"
 
     - name: Set up Gitea remote
-      run: git remote add gitea http://heiyu:12345678@www.tangtuan.top:5002/heiyu/pac-sync-from-github.git
+      run: git remote add gitea http://heiyu:12345678@www.tangtuan.top:5002/heiyu/pac.git
       
     - name: Pull from Gitea
       run: |
