--- a/.github/workflows/sync-to-gitea.yml
+++ b/.github/workflows/sync-to-gitea.yml
@@ -2,7 +2,7 @@ name: Sync GFWList to Gitea
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # 每天运行一次
+    - cron: '0 0 * * 6'  # 每天运行一次
   workflow_dispatch:  # 手动触发
 
 jobs:
@@ -33,6 +33,10 @@ jobs:
     
     - name: Modify first line of gfwlist.pac
       run: sed -i '1s/.*/var proxy = "PROXY ipv6.tangtuan.top:5020; DIRECT;";/' gfwlist.pac
+
+    - name: Add websites to rules
+      run: |
+        sed -i '/var rules = \[/a \ \ \ \ [\n\ \ \ \ \ \ "byr.pt",\n\ \ \ \ \ \ "cloudflare.com"\n\ \ \ \ ],' gfwlist.pac
         
     - name: Commit and push changes if there are any
       run: |
